--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@ body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
+  background: #333;
 }
 img {
   display: block;
@@ -13,7 +14,7 @@ img {
 }
 .container {
   position: relative;
-  max-width: 250px;
+  max-width: 600px;
   width: 100%;
   background: #ccc;
   margin: 10px auto;
